// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cross-check-session utils: addReviewerToRequest should add reviewers to an attendee 1`] = `
Array [
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "reviewerOf": Array [
      Object {
        "author": "john",
        "score": null,
        "state": null,
      },
      Object {
        "author": "boris-britva",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
]
`;

exports[`Cross-check-session utils: addScoreToAllRequests should add score to all request of a list 1`] = `
Array [
  Object {
    "author": "john",
    "id": "rev-req-2",
    "reviewerOf": Array [
      Object {
        "author": "jack",
        "score": 54,
        "state": "ACCEPTED",
      },
      Object {
        "author": "macKlein",
        "score": 51,
        "state": "ACCEPTED",
      },
    ],
    "score": 53,
    "state": "PUBLISHED",
  },
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "reviewerOf": Array [
      Object {
        "author": "macKlein",
        "score": 57,
        "state": "ACCEPTED",
      },
      Object {
        "author": "boris-britva",
        "score": 48,
        "state": "ACCEPTED",
      },
    ],
    "score": 53,
    "state": "PUBLISHED",
  },
  Object {
    "author": "macKlein",
    "id": "rev-req-4",
    "reviewerOf": Array [
      Object {
        "author": "boris-britva",
        "score": 45,
        "state": "ACCEPTED",
      },
      Object {
        "author": "rediska",
        "score": 89,
        "state": "ACCEPTED",
      },
    ],
    "score": 67,
    "state": "PUBLISHED",
  },
  Object {
    "author": "boris-britva",
    "id": "rev-req-3",
    "reviewerOf": Array [
      Object {
        "author": "rediska",
        "score": 80,
        "state": "ACCEPTED",
      },
      Object {
        "author": "john",
        "score": 88,
        "state": "DISPUTED",
      },
    ],
    "score": 80,
    "state": "PUBLISHED",
  },
  Object {
    "author": "rediska",
    "id": "rev-req-5",
    "reviewerOf": Array [
      Object {
        "author": "john",
        "score": 81,
        "state": "ACCEPTED",
      },
      Object {
        "author": "jack",
        "score": 53,
        "state": "ACCEPTED",
      },
    ],
    "score": 67,
    "state": "PUBLISHED",
  },
]
`;

exports[`Cross-check-session utils: addScoreToRequest:  should add score to reviewers 1`] = `
Object {
  "author": "john",
  "id": "rev-req-2",
  "reviewerOf": Array [
    Object {
      "author": "jack",
      "score": 54,
      "state": "ACCEPTED",
    },
    Object {
      "author": "macKlein",
      "score": 51,
      "state": "ACCEPTED",
    },
  ],
  "score": 53,
  "state": "PUBLISHED",
}
`;

exports[`Cross-check-session utils: addScoreToReviewer:  should not change other data 1`] = `
Object {
  "author": "jack",
  "score": 54,
  "state": "ACCEPTED",
}
`;

exports[`Cross-check-session utils: createReviewerDistribution: should create reviewer distribution per 1 reviewers amount 1`] = `
Array [
  Object {
    "author": "john",
    "id": "rev-req-2",
    "reviewerOf": Array [
      Object {
        "author": "jack",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "reviewerOf": Array [
      Object {
        "author": "macKlein",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "macKlein",
    "id": "rev-req-4",
    "reviewerOf": Array [
      Object {
        "author": "boris-britva",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "boris-britva",
    "id": "rev-req-3",
    "reviewerOf": Array [
      Object {
        "author": "rediska",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "rediska",
    "id": "rev-req-5",
    "reviewerOf": Array [
      Object {
        "author": "john",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
]
`;

exports[`Cross-check-session utils: createReviewerDistribution: should create reviewer distribution per 2 reviewers amount 1`] = `
Array [
  Object {
    "author": "john",
    "id": "rev-req-2",
    "reviewerOf": Array [
      Object {
        "author": "jack",
        "score": null,
        "state": null,
      },
      Object {
        "author": "macKlein",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "reviewerOf": Array [
      Object {
        "author": "macKlein",
        "score": null,
        "state": null,
      },
      Object {
        "author": "boris-britva",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "macKlein",
    "id": "rev-req-4",
    "reviewerOf": Array [
      Object {
        "author": "boris-britva",
        "score": null,
        "state": null,
      },
      Object {
        "author": "rediska",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "boris-britva",
    "id": "rev-req-3",
    "reviewerOf": Array [
      Object {
        "author": "rediska",
        "score": null,
        "state": null,
      },
      Object {
        "author": "john",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "rediska",
    "id": "rev-req-5",
    "reviewerOf": Array [
      Object {
        "author": "john",
        "score": null,
        "state": null,
      },
      Object {
        "author": "jack",
        "score": null,
        "state": null,
      },
    ],
    "score": null,
    "state": "PUBLISHED",
  },
]
`;

exports[`Cross-check-session utils: getRequestList should return an request list 1`] = `
Array [
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "john",
    "id": "rev-req-2",
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "boris-britva",
    "id": "rev-req-3",
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "macKlein",
    "id": "rev-req-4",
    "score": null,
    "state": "PUBLISHED",
  },
  Object {
    "author": "rediska",
    "id": "rev-req-5",
    "score": null,
    "state": "PUBLISHED",
  },
]
`;
